# coderabbit-conflict-resolver

./: .coderabbit.yaml  .cursorrules  .env.example  .gitignore  .markdownlint-cli2.yaml  .markdownlint.yaml  .mcp.json  .pre-commit-config.yaml  .truffleignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETE_IMPLEMENTATION_PLAN.md  CONTRIBUTING.md  GITHUB_ISSUES_CHECKLIST.md  Kickstart.md  Makefile  NEXT_STEPS.md  NOTES_FOR_FUTURE_WORK.md  README.md  SECURITY.md  SETUP_COMPLETE.md  WORKSPACE_OPTIMIZATION.md  claude.md  cleanup_caches.py  git  monitor_file_events.py  mypy.ini  osv-scanner.toml  package-lock.json  phase5-validation-report.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-ml.in  requirements-ml.txt  requirements.in  requirements.txt  setup-dev.sh
.claude/: settings.json
.clusterfuzzlite/: Dockerfile  README.md  build.sh  requirements-fuzz.txt  requirements-py311.txt
.cursor/rules/: architecture.mdc  coderabbit.mdc  configuration.mdc  control-flow.mdc  cost-optimization.mdc  dev-workflow.mdc  docstrings.mdc  error-handling.mdc  llm-integration.mdc  metrics-monitoring.mdc  parallel-processing.mdc  python-style.mdc  python-utilities.mdc  security-config.mdc  testing.mdc  type-safety.mdc
.github/: CODEOWNERS  CODEQL_SETUP.md  PULL_REQUEST_TEMPLATE.md  SAFETY_SETUP.md  SUPPORT.md  dependabot.yml  labeler.yml  osv-scanner.toml  pull_request_template.md  renovate.json5  requirements-bootstrap.txt
.github/ISSUE_TEMPLATE/: bug_report.md  conflict_report.md  documentation.md  feature_request.md  performance.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  clusterfuzzlite.yml  dependency-submission.yml  docs-deploy.yml  docs.yml  fuzz-extended.yml  labeler.yml  release.yml  security.yml  stale.yml  version-bump.yml
docs/: CHANGELOG_TYPE_SAFETY.md  MCP_ENVIRONMENT_SETUP.md  MCP_PYTHON_PACKAGES.md  MCP_QUICK_REFERENCE.md  MCP_SERVERS_SETUP.md  Makefile  NO_VERIFY_BLOCKER.md  SKILLS_SETUP.md  agent_plan.md  api-reference.md  architecture.md  circuit-breaker.md  conf.py  configuration.md  conflict-types.md  cost-estimation.md  cost-optimization.md  getting-started.md  github-actions-sha-management.md  index.rst  llm-configuration.md  llm-provider-guide.md  local-llm-operation-guide.md  metrics-guide.md  migration.md  ollama-setup.md  optimization-guide.md  osv-scanner.toml  parallel-processing.md  performance-benchmarks.md  performance-tuning.md  privacy-architecture.md  privacy-faq.md  requirements.in  requirements.txt  resolution-strategies.md  rollback-system.md  secret-scanner.md  security-architecture.md  troubleshooting.md
docs/integration-guides/: github-actions.md  gitlab-ci.md
docs/planning/: LLM_ARCHITECTURE.md  LLM_REFACTOR_ROADMAP.md  MIGRATION_GUIDE.md  PR_238_CodeRabbit_Issues.md  ROADMAP.md
docs/planning/archive/: initial-kickstart.md  phase-0-complete.md  setup-process.md
docs/security/: assurance-case.md  compliance.md  incident-response.md  llm-security.md  phase5-security-audit.md  security-testing.md  threat-model.md
docs/testing/: PYTEST_9_MIGRATION.md  SUBTESTS_GUIDE.md  TESTING.md  gpu-testing.md
examples/: README.md
examples/use-cases/: README.md
examples/workflows/: github-actions.yml  gitlab-ci.yml
fuzz/: Dockerfile  README.md  build.sh  fuzz_handlers.py  fuzz_input_validator.py  fuzz_secret_scanner.py
scripts/: README.md  add_workflow_observability.py  benchmark_llm.py  block-no-verify.py  bump_version.py  clean.py  generate_build_metadata.py  get-action-sha.sh  git-wrapper.sh  install-hooks.sh  install-no-verify-blocker.sh  pre-push-hook.sh  setup-git-override.sh  setup_ollama.sh  validate_wheel.py  verify-workflow-shas.sh  verify_privacy.sh
src/pr_conflict_resolver/: __init__.py
src/pr_conflict_resolver/analysis/: conflict_detector.py
src/pr_conflict_resolver/benchmarks/: __init__.py  utils.py
src/pr_conflict_resolver/cli/: config_loader.py  llm_error_handler.py  main.py
src/pr_conflict_resolver/config/: __init__.py  exceptions.py  presets.py  runtime_config.py
src/pr_conflict_resolver/core/: __init__.py  models.py  resolver.py  rollback.py
src/pr_conflict_resolver/handlers/: __init__.py  base.py  json_handler.py  toml_handler.py  yaml_handler.py
src/review_bot_automator/: __init__.py
tests/: conftest.py
tests/cli/: test_cost_budget_integration.py  test_llm_cli_integration.py
tests/dry_run/: PR8_PATCH_VERIFICATION_REPORT.md  pr8_analysis.py.disabled  pr8_comments.json  pr8_parsed_changes.json  pr8_results.json  pr8_summary.md
tests/fixtures/: changes_all_conflicts.json  changes_mixed.json  changes_no_conflicts.json  config_all_mode.yaml  config_dry_run.yaml  config_with_rollback.yaml  conflict_complex.json  conflict_nested.json  conflict_simple.json
tests/integration/: test_application_modes.py  test_build_artifacts.py  test_full_workflow.py  test_rollback_manager.py
tests/llm/: test_caching_provider.py  test_cost_tracker.py  test_error_handlers.py  test_metrics.py  test_metrics_aggregator.py  test_parallel_parser.py  test_presets.py
tests/security/: __init__.py  test_cli_security.py  test_file_permissions.py  test_fuzz_input_validator.py  test_fuzz_json_handler.py  test_fuzz_toml_handler.py  test_fuzz_yaml_handler.py  test_github_security.py  test_injection_attacks.py  test_input_validation.py  test_llm_security.py  test_path_traversal.py  test_secret_detection.py  test_secure_file_ops.py  test_security_config.py  test_supply_chain.py  test_toml_handler_security.py
tests/unit/: test_benchmark_utils.py  test_build_scripts.py  test_cli.py  test_cli_validation.py  test_cli_validation_enhanced.py  test_conflict_detector.py  test_github_integration.py  test_handlers.py  test_llm_config.py  test_llm_helpers.py  test_models.py  test_presets.py  test_priority_strategy.py  test_resolver.py  test_resolver_parallel.py  test_review_fixes.py  test_rollback.py  test_runtime_config.py  test_runtime_config_additional.py  test_runtime_config_llm_features.py  test_runtime_config_parallel_llm.py  test_text_utils.py  test_toml_formatting_preservation.py
(+128 files in other folders)
